# gourl

./: .gitignore  Dockerfile  app.py  config.py  middlewares.py  pyproject.toml  schemas.py
database/: database.py  models.py  orm.py
static/: index.html
