[project]
name = "gourl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "certifi>=2026.2.25",
    "fastapi>=0.135.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "shortuuid>=1.0.13",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
